syntax = "proto3";

import "apphost/lib/proto_config/types_nora/graph.proto";


package NAppHostPbConfig.NNora;
option java_package = "ru.yandex.alice.kronstadt.tools.generator";
option java_multiple_files = true;


message TGraphWrapper {
    TDefaultNodeAlerts monitoring = 1;
    TGraph settings = 2;
}
